# doc_man

./: .containerignore  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Justfile  README.md  docker-compose.yml  flake.nix
docs/design/: 01_overview.md  02_er.md  03_tables.md  04_document_numbering.md  05_approval_flow.md  06_api.md  07_review_comments_20260305.md
docs/plans/: 000_design_plan.md  001_rest_api_implementation.md  002_seed-data-implementation.md  003_cargo-workspace.md  004_unify-flatten-dept-tree.md  005_deduplicate-brief-types.md  006_docker-justfile-readme.md  007_shellhook-to-justfile.md  008_replace-circulation-with-distribution.md  009_document-page-restructure.md  010_revision-management.md  011_list-search.md  012_list-filter.md  013_wbs-code-list-search.md  014_positions-role-resolution.md  015_list_sort.md  016_decompose_doc_number.md  017_project_fiscal_year_column.md  018_legacy_db_consolidation.md  018_postgres_to_sqlite.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: auth.rs  main.rs
frontend/src/api/: approval_steps.rs  circulations.rs  client.rs  departments.rs  disciplines.rs  distributions.rs  document_kinds.rs  document_registers.rs  documents.rs  employees.rs  mod.rs  positions.rs  projects.rs  tags.rs  types.rs
frontend/src/components/: form.rs  layout.rs  loading.rs  mod.rs  modal.rs  pagination.rs  status_badge.rs  toast.rs  tree_view.rs
frontend/src/pages/: dashboard.rs  departments.rs  disciplines.rs  document_kinds.rs  document_registers.rs  login.rs  mod.rs  positions.rs  tags.rs
frontend/src/pages/documents/: approval.rs  circulation.rs  create.rs  detail.rs  distribution.rs  form.rs  list.rs  mod.rs
frontend/src/pages/employees/: form.rs  list.rs
frontend/src/pages/projects/: form.rs  list.rs
frontend/style/: main.css
migrations/: 20260305000004_create_disciplines.sql  20260305000006_create_document_kinds.sql  20260305000008_create_documents.sql  20260305000012_create_circulations.sql  20260305000013_create_path_scan_issues.sql
scripts/: fix-markdown-lint.py  seed.sql
server/: Cargo.toml
server/migrations/: 20260305000000_enable_pgcrypto.sql  20260305000001_create_departments.sql  20260305000002_create_employees.sql  20260305000003_create_employee_departments.sql  20260305000005_create_projects.sql  20260305000007_create_document_registers.sql  20260305000009_create_tags.sql  20260305000010_create_document_tags.sql  20260305000011_create_approval_steps.sql  20260305000014_add_email_to_employees.sql  20260310000015_remove_circulation_status.sql  20260310000016_create_distributions.sql  20260320000017_create_document_revisions.sql  20260320000018_backfill_document_revisions.sql  20260321000019_create_positions.sql  20260321000020_add_position_and_role_grants.sql  20260324000021_decompose_doc_number.sql  20260324000022_projects_start_date_not_null.sql
server/scripts/: seed.sql
server/scripts/seed/: 01_master.sql  02_projects.sql  03_documents.sql  04_workflows.sql  05_historical.sql
server/src/: auth.rs  authorization.rs  error.rs  lib.rs  main.rs  pagination.rs  state.rs
server/src/handlers/: approval_steps.rs  circulations.rs  departments.rs  disciplines.rs  distributions.rs  document_kinds.rs  document_registers.rs  documents.rs  employees.rs  mod.rs  positions.rs  projects.rs  tags.rs
server/src/models/: discipline.rs  distribution.rs  document.rs  document_register.rs  document_revision.rs  employee.rs  mod.rs  position.rs  project.rs
server/src/routes/: mod.rs
server/src/services/: document_numbering.rs  mail.rs  mod.rs
server/tests/: approval_steps.rs  auth.rs  circulations.rs  department_scope.rs  departments.rs  disciplines.rs  distributions.rs  document_kinds.rs  document_registers.rs  documents.rs  employees.rs  health.rs  permissions.rs  positions.rs  projects.rs
server/tests/helpers/: mod.rs
src/: auth.rs  error.rs  lib.rs  main.rs  pagination.rs
src/handlers/: approval_steps.rs  circulations.rs  departments.rs  disciplines.rs  document_registers.rs  documents.rs  employees.rs  mod.rs  projects.rs  tags.rs
src/models/: approval_step.rs  circulation.rs  department.rs  discipline.rs  document_kind.rs  document_register.rs  employee.rs  mod.rs  project.rs  tag.rs
src/routes/: mod.rs
src/services/: document_numbering.rs
tests/: approval_steps.rs  auth.rs  circulations.rs  departments.rs  disciplines.rs  documents.rs  employees.rs  health.rs  permissions.rs  projects.rs  tags.rs
tests/helpers/: mod.rs
