[package]
name = "doc_man"
version = "0.1.0"
edition = "2024"

[lib]
name = "doc_man"
path = "src/lib.rs"

[dependencies]
axum            = { version = "0.8.8", features = ["macros"] }
tower           = { version = "0.5.3", features = ["util"] }
tower-http      = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tokio           = { version = "1.50.0",   features = ["full"] }
sqlx            = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde           = { version = "1.0.228",   features = ["derive"] }
serde_json      = "1.0.149"
uuid            = { version = "1.22.0",   features = ["v4", "serde"] }
chrono          = { version = "0.4.44", features = ["serde"] }
thiserror       = "2.0.18"
tracing         = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }


