[package]
name = "doc-man-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = "0.8.12"
leptos_meta = "0.8.6"
gloo-net = { version = "0.6.0", features = ["json"] }
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["serde", "v4", "js"] }
chrono = { version = "0.4.44", features = ["serde"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["Window", "Location", "Storage", "HtmlInputElement", "HtmlSelectElement", "console"] }
console_error_panic_hook = "0.1.7"
