[package]
name = "doc-man-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
gloo-net.workspace = true
gloo-storage.workspace = true
gloo-timers.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["js"] }
chrono.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
console_error_panic_hook.workspace = true
